maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:66: error: Unmatched closing brace '}' ignored here
}
^